# otica-hope-shopping-backend

./: README.md
hope-ecommerce/: create_table.py  docker-compose.yml  pyproject.toml  serviceAccountKey.json
hope-ecommerce/core/: configs.py  database.py  deps.py
hope-ecommerce/models/: __all__models.py  grupo_prd_model.py  otica_model.py  sub_grupo_prd_model.py
hope-ecommerce/schemas/: grupo_prd_schema.py  otica_schema.py  sub_grp_prd_schema.py
